syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "ru.neoflex.market.order";

package order;

message Empty {}

message UserResponse {
  string userId = 1;
  string name = 2;
  string lastName = 3;
  string balance = 4;
  string age = 5;
}

message UserCreateRequest {
  string name = 1;
  string last_name = 2;
  string balance = 3;
  int32 age = 4;
}

message UserRequest {
  string userId = 1;
}

message UserCreateResponse {
  string userId = 1;
}

message UserDeleteRequest {
  string userId = 1;
}

message UserDeleteResponse {
  string userId = 1;
}

message BalanceUpRequest {
  string userId = 1;
  string amount = 2;
}

message BalanceUpResponse {
  string userId = 1;
}

message BalanceMinusRequest {
  string userId = 1;
  string amount = 2;
}

message BalanceMinusResponse {
  string userId = 1;
}

service UserService {
  rpc getUsers (Empty) returns (stream UserResponse) {}
  rpc getUser (UserRequest) returns (UserResponse) {}
  rpc userCreate (UserCreateRequest) returns (UserCreateResponse) {}
  rpc userDelete (UserDeleteRequest) returns (UserDeleteResponse) {}
  rpc balanceUp (BalanceUpRequest) returns (BalanceUpResponse) {}
  rpc balanceMinus (BalanceMinusRequest) returns (BalanceMinusResponse) {}
}
